Fixed alignment of selected foods

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,3 +57,8 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
+
+.centerlist {
+  margin-left: auto;
+  margin-right: auto;
+}
