--- a/client/src/component/Login/User.module.css
+++ b/client/src/component/Login/User.module.css
@@ -1,17 +1,3 @@
 .login {
   text-align: center;
 }
-
-.loginButton {
-  height: 40px;
-  width: 150px;
-  margin: 5px;
-  background-color: darkblue;
-  color: azure;
-}
-
-.loginButton:hover {
-  background-color: skyblue;
-  color: wheat;
-  cursor: pointer;
-} 
